# shamrocq

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benchmarks/: compare.sh  record.sh
crates/shamrocq/: Cargo.toml  build.rs
crates/shamrocq-bytecode/src/: lib.rs  op.rs
crates/shamrocq-compiler/src/: bytecode.rs  codegen.rs  desugar.rs  main.rs  resolve.rs
crates/shamrocq-reader/src/: main.rs
crates/shamrocq/src/: arena.rs  lib.rs  program.rs  value.rs  vm.rs
crates/shamrocq/tests/: fourchette.rs  gc_test.rs  hash_forest.rs  nat_elim.rs  synth_arith.rs  synth_assoc.rs  synth_bytes_int.rs  synth_ffi.rs  synth_hof.rs  synth_int.rs  synth_list.rs  synth_option.rs  synth_tco.rs  synth_tree.rs
doc/: BYTECODE.md  CODEGEN.md  FFI.md  OPTIMIZE.md  ROCQ.md  VM.md
examples/baremetal/: build.rs  memory.x
examples/baremetal/.cargo/: config.toml
examples/baremetal/src/: main.rs
examples/demo/: Cargo.toml
examples/demo/scheme/: demo.scm
examples/eval/: Cargo.toml  build.rs
examples/eval/src/: main.rs
examples/parser/: Cargo.toml  build.rs
examples/parser/scheme/: parser.scm
examples/parser/src/: main.rs
examples/rbtree/: Cargo.toml  build.rs
examples/rbtree/src/: main.rs
examples/sort/: Cargo.toml  build.rs
examples/sort/src/: main.rs
rocq-projects/: README.md
rocq-projects/eval/: dune-project
rocq-projects/eval/theories/: Eval.v  Extract.v  (+1 more)
rocq-projects/parser/: dune-project
rocq-projects/rbtree/: dune-project
rocq-projects/sort/: dune-project
scheme/: synth_bytes.scm  synth_int.scm
tools/bench/: Cargo.toml
(+25 files in other folders)
